[CU-86bbm4xfq] Fold the ga4gh_type reference tests into one parameterized test
Four tests differed only in how the reference was written and which column the
result came back under: unaliased, aliased with as, aliased without as, and the
reference given as JSON. Everything else — build the query, follow every page,
require rows, check the data model — was copied four times, so a change to how
the query is issued had to be made in four places and could be made in three.

The notations are data now, and the query itself moved into searchSelecting(),
which the inline-schema test uses too. Each case still reports under its own
name, so a failure says which notation broke.

Asserting through the properties map rather than pulling a column out of it also
covers the case the old assertions could not: a column arriving under the wrong
name failed with a NullPointerException from the lookup, rather than a message
naming the column that was expected and the ones that arrived.

Also carries the remaining SonarQube findings for this file: Stream.toList()
over collect(toList()), containsEntry over asserting on a lookup, hasSize over
asserting on size(), and an unrecognised id in checkJsonData now fails the test
instead of quietly passing it.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>